--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Billz"
         tools:targetApi="31">
+        <activity android:name=".ui.home.MainActivity"></activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.auth.SplashScreen"
+            android:theme="@style/SplashTheme"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
