--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
             android:name=".ui.auth.LoginPage"
             android:exported="false"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.Billz" />
+            android:theme="@style/PageTheme" />
         <activity android:name=".home.MainActivity" />
         <activity
             android:name=".ui.auth.SplashScreen"
