--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/PageTheme" />
+        <activity
+            android:name=".ui.auth.RegistrationPage"
+            android:exported="false"
+            android:label="@string/title_activity_registration"
+            android:theme="@style/PageTheme" />
         <activity android:name=".home.MainActivity" />
         <activity
             android:name=".ui.auth.SplashScreen"
