--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
             android:exported="false"
             android:label="@string/title_activity_registration"
             android:theme="@style/PageTheme" />
+        <activity
+            android:name=".ui.auth.GetStarted"
+            android:exported="false"
+            android:theme="@style/PageTheme" />
         <activity android:name=".home.MainActivity" />
         <activity
             android:name=".ui.auth.SplashScreen"
