--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:exported="false"
             android:label="@string/title_activity_registration"
             android:theme="@style/PageTheme" />
-        <activity android:name=".home.MainActivity" />
+        <activity android:name=".home.MainActivity"
+            />
         <activity
             android:name=".ui.auth.SplashScreen"
             android:exported="true"
