--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:label="@string/title_activity_registration"
             android:theme="@style/PageTheme" />
         <activity android:name=".home.MainActivity"
+            android:theme="@style/PageTheme"
             />
         <activity
             android:name=".ui.auth.SplashScreen"
