--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".BillzApp"
+        android:name="com.example.BillzApp"
         android:supportsRtl="true"
         android:theme="@style/Theme.Billz"
         tools:targetApi="31">
